# rag-system

./: README.md  pyproject.toml  requirements.txt
data/: test_set_questions.json
rag/: chunker.py  embedder.py  generator.py  loader.py  metrics.py  retriever.py
scripts/: run_answer.py  run_chunk.py  run_embed.py  run_load.py  run_metrics.py  setup.py
